[gd_scene load_steps=14 format=2]

[ext_resource path="res://Juego/Estacion Espacial/dotBlanco.png" type="Texture" id=1]
[ext_resource path="res://Juego/Estacion Espacial/EstacioEspacial.png" type="Texture" id=2]
[ext_resource path="res://Juego/Estacion Espacial/EstacionRecarga.gd" type="Script" id=3]
[ext_resource path="res://Juego/Estacion Espacial/Vacio_sfx.ogg" type="AudioStream" id=4]
[ext_resource path="res://Juego/Estacion Espacial/Carga_sfx.ogg" type="AudioStream" id=5]
[ext_resource path="res://Juego/UI/Mteoeritos Future.ttf" type="DynamicFontData" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 72.0
height = 132.0

[sub_resource type="CircleShape2D" id=2]
radius = 399.696

[sub_resource type="Animation" id=3]
resource_name = "activado"
length = 4.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColision:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaRecarga:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColision/SpriteEstacion:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaRecarga/SpriteZonaRecarga:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.321569, 0.984314, 0.0588235, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="DynamicFont" id=7]
size = 40
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="EstacionRecarga" type="Node2D" groups=[
"minimapa",
]]
script = ExtResource( 3 )

[node name="AreaColision" type="Area2D" parent="."]
collision_layer = 2147483712
collision_mask = 31

[node name="SpriteEstacion" type="Sprite" parent="AreaColision"]
z_index = 1
z_as_relative = false
texture = ExtResource( 2 )

[node name="ColisionEstacion" type="CollisionShape2D" parent="AreaColision"]
shape = SubResource( 1 )

[node name="AreaRecarga" type="Area2D" parent="."]
space_override = 1
gravity_point = true
gravity = 1000.0
collision_layer = 129

[node name="ColisionRecarga" type="CollisionShape2D" parent="AreaRecarga"]
shape = SubResource( 2 )

[node name="SpriteZonaRecarga" type="Sprite" parent="AreaRecarga"]
modulate = Color( 0.223529, 0.32549, 0.960784, 0.14902 )
scale = Vector2( 30.6667, 27.8333 )
z_as_relative = false
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "activado"
anims/activado = SubResource( 3 )
anims/default = SubResource( 4 )

[node name="CargaSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -6.82
bus = "SFX"

[node name="VacioSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.23
bus = "SFX"

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -56.7764
margin_top = -185.269
margin_right = 111.224
margin_bottom = -140.269
rect_scale = Vector2( 0.7, 0.7 )
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
value = 80.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
[connection signal="body_entered" from="AreaRecarga" to="." method="_on_AreaRecarga_body_entered"]
[connection signal="body_exited" from="AreaRecarga" to="." method="_on_AreaRecarga_body_exited"]
